cmake_minimum_required(VERSION 2.8.9)
project (thread_perf)
set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)
find_package( Threads REQUIRED)
set (CMAKE_CXX_FLAGS "-std=c++1z -O2 --save-temps")
add_executable(thread_perf thread_perf.cpp)
add_executable(fork_perf fork_perf.cpp)
target_link_libraries(thread_perf Threads::Threads)
